# text2video-dfloat11

./: README.md  pyproject.toml
src/text2video/: cli.py  engine.py  hardware.py  paths.py  server.py  storage.py
src/text2video/static/: index.html
src/text2video/static/i18n/: en.json
src/text2video/static/js/: main.js
